--- a/web/public/my-app/src/app/page1.component.html
+++ b/web/public/my-app/src/app/page1.component.html
@@ -1,3 +1,8 @@
+<nav>
+  <a routerLink="/page1" routerLinkActive="active">page1</a>
+  <a routerLink="/page2" routerLinkActive="active">page2</a>
+</nav>
+<websocket></websocket>
 <div>
   <h2>page1</h2>
 </div>
