--- a/web/public/my-app/src/app/page2.component.html
+++ b/web/public/my-app/src/app/page2.component.html
@@ -3,6 +3,6 @@
   <a routerLink="/page2" routerLinkActive="active">page2</a>
 </nav>
 <websocket></websocket>
-<div>
+<div class="page">
   <h2>page2</h2>
 </div>
