--- a/web/public/my-app/src/app/page2.component.html
+++ b/web/public/my-app/src/app/page2.component.html
@@ -1,6 +1,8 @@
 <nav>
   <a routerLink="/page1" routerLinkActive="active">page1</a>
   <a routerLink="/page2" routerLinkActive="active">page2</a>
+  <a routerLink="/page3" routerLinkActive="active">page3</a>
+  <a routerLink="/page4" routerLinkActive="active">page4</a>
 </nav>
 <websocket></websocket>
 <div class="page">
