--- a/web/public/my-app/src/app/controller.component.html
+++ b/web/public/my-app/src/app/controller.component.html
@@ -1,8 +1,7 @@
-<h3>controller
 <div class="grid grid-pad">
   <a *ngFor="let p of pages" (click)="onClick(p)" class="col-1-4">
     <div class="module hero">
-      <h4>{{p}}</h4>
+      <h4>show {{p}}</h4>
     </div>
   </a>
 </div>
