light ctrl interface

--- a/web/public/my-app/src/app/controller.component.html
+++ b/web/public/my-app/src/app/controller.component.html
@@ -5,3 +5,15 @@
     </div>
   </a>
 </div>
+<div class="grid grid-pad">
+  <a (click)="ctrlLight('on')" class="col-1-4">
+    <div class="module hero">
+      <h4>on</h4>
+    </div>
+  </a>
+  <a (click)="ctrlLight('off')" class="col-1-4">
+    <div class="module hero">
+      <h4>off</h4>
+    </div>
+  </a>
+</div>
