--- a/web/public/my-app/src/app/page2.component.html
+++ b/web/public/my-app/src/app/page2.component.html
@@ -1,5 +1,5 @@
 <websocket></websocket>
 <div class="page">
-  <video src="assets/mov/test_2.mp4" autoplay>
+  <video class="video" src="assets/mov/test_2.mp4" autoplay>
   </video>
 </div>
