--- a/web/public/my-app/src/app/page1.component.html
+++ b/web/public/my-app/src/app/page1.component.html
@@ -1,5 +1,5 @@
 <websocket></websocket>
 <div class="page">
-  <video class="video" src="assets/mov/test_1.mp4" autoplay>
+  <video class="video" width="1200" height="1440" src="assets/mov/test_1.mp4" autoplay>
   </video>
 </div>
