--- a/web/public/my-app/src/app/controller.component.css
+++ b/web/public/my-app/src/app/controller.component.css
@@ -1,5 +1,5 @@
 [class*='col-'] {
-	float: left;
+	display: inline-block;
 	padding-right: 20px;
 	padding-bottom: 20px;
 }
@@ -15,10 +15,7 @@ a {
 	box-sizing: border-box;
 }
 h3 {
-	text-align: center; margin-bottom: 0;
-}
-h4 {
-	position: relative;
+	margin-bottom: 0;
 }
 .grid {
 	margin: 0;
