--- a/web/public/my-app/src/app/controller.component.html
+++ b/web/public/my-app/src/app/controller.component.html
@@ -2,7 +2,7 @@
 <h3>viewer</h3>
 <div class="grid grid-pad">
   <a *ngFor="let p of pages" (click)="onClick(p)" class="col-1-4">
-    <div class="module hero">
+    <div class="module">
       <h4>show {{p}}</h4>
     </div>
   </a>
@@ -11,12 +11,12 @@
 <h3>light</h3>
 <div class="grid grid-pad">
   <a (click)="ctrlLight('on')" class="col-1-4">
-    <div class="module hero">
+    <div class="module">
       <h4>on</h4>
     </div>
   </a>
   <a (click)="ctrlLight('off')" class="col-1-4">
-    <div class="module hero">
+    <div class="module">
       <h4>off</h4>
     </div>
   </a>
@@ -25,12 +25,12 @@
 <h3>line push (今は植原のlineに通知します)</h3>
 <div class="grid grid-pad">
   <a (click)="sendToLine('豚買ってきて')" class="col-1-4">
-    <div class="module hero">
+    <div class="module">
       <h4>豚買ってきて</h4>
     </div>
   </a>
   <a (click)="sendToLine('hoge')" class="col-1-4">
-    <div class="module hero">
+    <div class="module">
       <h4>hoge</h4>
     </div>
   </a>
