--- a/web/public/my-app/src/app/controller.component.html
+++ b/web/public/my-app/src/app/controller.component.html
@@ -22,7 +22,7 @@
   </a>
 </div>
 <hr>
-<h3>line push (今は植原のlineに通知します)</h3>
+<h3>line push (GUI先行デモgroupに通知)</h3>
 <div class="grid grid-pad">
   <a (click)="sendToLine('豚買ってきて')" class="col-1-4">
     <div class="module">
