--- a/web/public/my-app/src/app/page3.component.html
+++ b/web/public/my-app/src/app/page3.component.html
@@ -2,4 +2,5 @@
 <div class="page">
   <video class="video" width="1200" height="1440" src="assets/mov/test_3.mp4" autoplay>
   </video>
+  <div class="overlay">hoge</div>
 </div>
