--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -16,3 +16,10 @@
     </div>
   </a>
 </div>
+<div class="grid grid-pad">
+  <a (click)="devctrl({tv: {poweron: false}})" class="col-1-4">
+    <div class="module">
+      <h4>tv off</h4>
+    </div>
+  </a>
+</div>
