--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -10,11 +10,13 @@
 <hr>
 <h3>controller</h3>
 <h4>TV</h4>
-<div class="grid grid-pad">
-  <a (click)="devctrl({tv: {poweron: true}})" class="button">
-    on
+<div class="grid">
+  <a *ngFor="let c of [[true, 'on'], [false, 'off']]" (click)="devctrl({tv: {poweron: c[0]}})" class="button">
+    {{c[1]}}
   </a>
-  <a (click)="devctrl({tv: {poweron: false}})" class="button">
-    off
+</div>
+<div class="grid">
+  <a *ngFor="let c of [1,2,3,4,5,6,7,8,9,10,11,12]" (click)="devctrl({tv: {channel: c}})" class="button">
+    {{c}}
   </a>
 </div>
