get bounding box of <video>

--- a/site/src/app/page1.component.html
+++ b/site/src/app/page1.component.html
@@ -1,5 +1,6 @@
 <websocket></websocket>
 <div class="page">
+  <button (click)="adjustPosition()" style="background-color: white">test</button>
   <video class="video" width="1200" height="1440" src="assets/mov/test_1.mp4" autoplay>
   </video>
 </div>
