--- a/site/src/app/page1.component.css
+++ b/site/src/app/page1.component.css
@@ -3,3 +3,16 @@ div.page {
 	background-color: #F44336;
 	*/
 }
+
+.button2 {
+	display: inline-block;
+	margin-left: 10px;
+	margin-top: 10px;
+	width: 64px;
+	height: 36px;
+	line-height: 32px;
+	border-radius: 2px;
+	background-color: #60f3c0;
+	text-align: center;
+	border: none;
+}
