--- a/site/src/app/page1.component.css
+++ b/site/src/app/page1.component.css
@@ -5,12 +5,13 @@ div.page {
 }
 
 .button2 {
+	font-size: 24px;
 	display: inline-block;
 	margin-left: 10px;
 	margin-top: 10px;
-	width: 64px;
-	height: 36px;
-	line-height: 32px;
+	width: 160px;
+	height: 48px;
+	line-height: 48px;
 	border-radius: 2px;
 	background-color: #60f3c0;
 	text-align: center;
