update movie file path

--- a/site/src/app/page3.component.html
+++ b/site/src/app/page3.component.html
@@ -1,6 +1,6 @@
 <websocket></websocket>
 <div class="page">
-  <video class="video" width="1200" height="1440" src="assets/mov/test_3.mp4" autoplay>
+  <video class="video" width="1200" height="1440" src="assets/mov/3.mp4" autoplay>
   </video>
   <div class="overlay">time left {{clock_str}}</div>
 </div>
