--- a/site/src/app/controller.component.html
+++ b/site/src/app/controller.component.html
@@ -7,6 +7,13 @@
     </div>
   </a>
 </div>
+<div class="grid grid-pad">
+  <a *ngFor="let p of ['1', '2', '3', '4']" (click)="onClick(p)" class="col-1-4">
+    <div class="module">
+      <h4>movie {{p}}</h4>
+    </div>
+  </a>
+</div>
 <hr>
 <h3>light</h3>
 <div class="grid grid-pad">
