--- a/site/src/app/controller.component.html
+++ b/site/src/app/controller.component.html
@@ -8,7 +8,7 @@
   </a>
 </div>
 <div class="grid grid-pad">
-  <a *ngFor="let p of ['1', '2', '3', '4']" (click)="onClick(p)" class="col-1-4">
+  <a *ngFor="let p of ['1', '2', '3', '4']" (click)="movieCtrl(p)" class="col-1-4">
     <div class="module">
       <h4>movie {{p}}</h4>
     </div>
