--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -1,7 +1,20 @@
-<websocket></websocket>
 <div class="page">
   <button (click)="adjustPosition()" class="button2">scroll</button><br>
   <button (click)="toggleDisplayVideoBorder()" class="button2">border</button>
-  <video class="video" width="1200" height="1440" src="assets/mov/1.mp4" autoplay>
-  </video>
+  <div class="movie">
+    <video width="1200" height="1440" src="assets/mov/1.mp4">
+    </video>
+  </div>
+  <div class="movie">
+    <video width="1200" height="1440" src="assets/mov/2.mp4">
+    </video>
+  </div>
+  <div class="movie">
+    <video width="1200" height="1440" src="assets/mov/3.mp4">
+    </video>
+  </div>
+  <div class="movie">
+    <video width="1200" height="1440" src="assets/mov/4.mp4">
+    </video>
+  </div>
 </div>
