count down timer

--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -12,6 +12,7 @@
   <div class="movie">
     <video width="1200" height="1440" src="assets/mov/3.mp4">
     </video>
+    <div class="overlay">{{clock_str}}</div>
   </div>
   <div class="movie">
     <video width="1200" height="1440" src="assets/mov/4.mp4">
