change movie by modifying visibility

--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -54,7 +54,8 @@ div.page {
 }
 
 .movie {
-	display: none;
+	display: block;
+	visibility: hidden;
 	position: absolute;
 	margin: auto;
 	left: 0;
