display small ball for count

--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -77,3 +77,13 @@ div.overlay {
 	top: 1024px;
 	font-size: 48px;
 }
+
+.ball {
+	position: absolute;
+	left: 300px;
+	top: 300px;
+	width: 20px;
+	height: 20px;
+    background: radial-gradient(rgba(255, 255, 255, 0.7) 70%,
+								rgba(255, 255, 255, 0.0) 71%);
+}
