--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -3,6 +3,9 @@
   <button (click)="toggleDisplayVideoBorder()" class="button2">border</button>
   <div id="content">
     <div id="header">
+      <div id="month">{{month}}</div>
+      <div id="day">{{day}}</div>
+      <div id="week">{{week}}</div>
     </div>
     <div class="movie">
       <video width="1200" height="1060" src="assets/mov/1.mp4">
