--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -18,7 +18,7 @@
     <div class="movie">
       <video width="1200" height="1060" src="assets/mov/3.mp4">
       </video>
-      <div class="overlay">{{clock_str}}</div>
+      <div id="clock">{{clock_str}}</div>
       <div id="ball"></div>
     </div>
     <div class="movie">
