--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -19,7 +19,7 @@ div.page {
 
 .button2 {
 	font-size: 24px;
-	display: inline-block;
+	display: block;
 	margin-left: 10px;
 	margin-top: 10px;
 	width: 140px;
