--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -1,11 +1,11 @@
 <div class="page">
-  <button (click)="adjustPosition()" class="button2">scroll</button>
-  <button (click)="toggleDisplayVideoBorder()" class="button2">border</button>
+  <button (click)="adjustPosition()" class="button">scroll</button>
+  <button (click)="toggleDisplayVideoBorder()" class="button">border</button>
 
-  <button (click)="movieSet(1)" class="button2">movie 1</button>
-  <button (click)="movieSet(2)" class="button2">movie 2</button>
-  <button (click)="movieSet(3)" class="button2">movie 3</button>
-  <button (click)="movieSet(4)" class="button2">movie 4</button>
+  <button (click)="movieSet(1)" class="button">movie 1</button>
+  <button (click)="movieSet(2)" class="button">movie 2</button>
+  <button (click)="movieSet(3)" class="button">movie 3</button>
+  <button (click)="movieSet(4)" class="button">movie 4</button>
   <div id="content">
     <div id="header">
       <div id="month">{{month}}</div>
