--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -2,10 +2,7 @@
   <button (click)="adjustPosition()" class="button">scroll</button>
   <button (click)="toggleDisplayVideoBorder()" class="button">border</button>
 
-  <button (click)="movieSet(1)" class="button">movie 1</button>
-  <button (click)="movieSet(2)" class="button">movie 2</button>
-  <button (click)="movieSet(3)" class="button">movie 3</button>
-  <button (click)="movieSet(4)" class="button">movie 4</button>
+  <button *ngFor="let i of [1,2,3,4]" (click)="movieSet(i)" class="button">movie {{i}}</button>
   <div id="content">
     <div id="header">
       <div id="month">{{month}}</div>
