import an open source

--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -22,6 +22,12 @@
       </video>
       <div id="clock">{{clock_str}}</div>
       <div id="ball"></div>
+      <div id="progress">
+        <svg viewBox="0 0 100 100">
+          <circle cx="50" cy="50" r="50" class="base" />
+          <circle cx="50" cy="50" r="25" class="circle" />
+        </svg>
+      </div>
     </div>
     <div class="movie">
       <video width="1200" height="1060" src="assets/mov/4.mp4">
