restart css animation by change the display style

--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -130,7 +130,7 @@ div.page {
 	top: 30px;
 	height: 0;
 	width: 300px;
-	display: block;
+	display: none;
 	padding-bottom: 300px;
 	margin-bottom:10px;
 }
@@ -151,14 +151,11 @@ div.page {
 }
 #progress .pie {
 	stroke: #00bcac;
-	webkit-animation-name: pie;
 	animation-name: pie;
+	animation: pie 40s linear;
 }
 #progress .base{
 	fill: #f9f9f9;
-}
-@-webkit-keyframes pie {
-	50%,100% { stroke-dasharray: 157,157,0,0;}
 }
 @keyframes pie {
 	50%,100% { stroke-dasharray: 157,157,0,0;}
