--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -25,7 +25,7 @@
       <div id="progress">
         <svg viewBox="0 0 100 100">
           <circle cx="50" cy="50" r="50" class="base" />
-          <circle cx="50" cy="50" r="25" class="circle" />
+          <circle cx="50" cy="50" r="25" class="circle pie" />
         </svg>
       </div>
     </div>
