--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -24,8 +24,8 @@
       <div id="ball"></div>
       <div id="progress">
         <svg viewBox="0 0 100 100">
-          <circle cx="50" cy="50" r="50" class="base" />
-          <circle cx="50" cy="50" r="25" class="circle pie" />
+          <circle cx="50" cy="50" r="25" class="base" />
+          <circle cx="50" cy="50" r="25" class="circle" />
         </svg>
       </div>
     </div>
