fix the state as the end of animation

--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -155,7 +155,7 @@ div.page {
 	stroke-dasharray: 0,157;
 	stroke: #fff;
 	animation-name: pie;
-	animation: pie 4s linear;
+	animation: pie 4s linear 0s forwards;
 }
 @keyframes pie {
 	50%,100% { stroke-dasharray: 0, 0, 157,157}
