--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -158,7 +158,7 @@ div.page {
 	animation: pie 4s linear 0s forwards;
 }
 @keyframes pie {
-	50%,100% { stroke-dasharray: 0, 0, 157,157}
+	100% { stroke-dasharray: 157,0}
 }
 
 .fadeIn {
