--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -23,8 +23,8 @@
       <div id="clock">{{clock_str}}</div>
       <div id="progress">
         <svg viewBox="0 0 100 100">
-          <circle cx="0" cy="0" r="100" class="base" />
-          <circle cx="0" cy="0" r="100" class="circle" />
+          <circle cx="0" cy="0" r="100" class="back" />
+          <circle cx="0" cy="0" r="100" class="front" />
         </svg>
       </div>
     </div>
