--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -6,6 +6,10 @@ div.page {
 	background-color: #000;
 	position: relative;
 }
+.flip180 {
+	transform:matrix(-1, 0, 0, 1, 0, 0);
+	filter: progid:DXImageTransform.Microsoft.BasicImage(mirror=1);
+}
 
 .video {
 	display: block;
