--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div class="page flip180">
   <button (click)="adjustPosition()" class="button">scroll</button>
   <button (click)="toggleDisplayVideoBorder()" class="button">border</button>
 
