--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -7,6 +7,10 @@ div.page {
 	position: relative;
 }
 
+.border {
+	border: 1px solid red;
+}
+
 .flip {
 	transform:matrix(-1, 0, 0, 1, 0, 0);
 	filter: progid:DXImageTransform.Microsoft.BasicImage(mirror=1);
