line push message fixed

--- a/site/src/app/controller.component.html
+++ b/site/src/app/controller.component.html
@@ -17,9 +17,9 @@
   </a>
 </div>
 <hr>
-<h3>line push (GUI先行デモgroupに通知)</h3>
+<h3>line push (GUI蜈郁｡後ョ繝｢group縺ｫ騾夂衍)</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let m of ['豚買ってきて', 'hoge']" (click)="sendToLine(m)" class="col-1-4">
+  <a *ngFor="let m of ['としさんがあと30分で帰ります']" (click)="sendToLine(m)" class="col-1-4">
     <div class="module">
       <h4>{{m}}</h4>
     </div>
