--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -18,12 +18,12 @@
       </video>
     </div>
     <div class="movie">
+      <img src="/assets/img/waku.png">
       <video width="1200" height="1060" src="assets/mov/3.mp4">
       </video>
       <div id="clock">{{clock_str}}</div>
       <div id="progress">
         <svg viewBox="0 0 100 100">
-          <circle cx="0" cy="0" r="50" class="back" />
           <circle cx="0" cy="0" r="50" class="front" />
         </svg>
       </div>
