waku design fixed

--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -18,7 +18,7 @@
       </video>
     </div>
     <div class="movie">
-      <img src="/assets/img/waku.png">
+      <img id="waku" src="/assets/img/waku.png">
       <video width="1200" height="1060" src="assets/mov/3.mp4">
       </video>
       <div id="clock">{{clock_str}}</div>
