--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -19,6 +19,7 @@
     </div>
     <div class="movie">
       <img id="waku" src="/assets/img/waku.png">
+      <img id="pie-background" src="/assets/img/color_circle.png">
       <video width="1200" height="1060" src="assets/mov/3.mp4">
       </video>
       <div id="clock">{{clock_str}}</div>
