--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -158,13 +158,13 @@ div.page {
 #progress .front {
 	fill: rgba(0,0,0,0);
 	stroke-width: 174;
-	stroke-dasharray: 314,0;
+	stroke-dasharray: 546,0; /* 3.14 x stroke-width */
 	stroke: #000;
 	animation-name: pie;
 	animation: pie 120s linear 0s forwards;
 }
 @keyframes pie {
-	100% { stroke-dasharray: 0,314}
+	100% { stroke-dasharray: 0,546}
 }
 
 .fadeIn {
