--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Yantramanav:300,400');
+@import url('https://fonts.googleapis.com/css?family=Yantramanav:400,700'); 
 
 div.page {
 	width: 2400px;
@@ -71,11 +71,11 @@ div.page {
 	font-size: 90px;
 	color: #fff;
 	position: absolute;
-	top: 133px;
+	top: 110px;
 	left: 0px;
 	width: 100px;
 	text-align: center;
-	font-weidht: bold;
+	font-weight: 700;
 }
 
 #day {
@@ -86,7 +86,7 @@ div.page {
 	left: 0px;
 	width: 100px;
 	text-align: center;
-	font-weidht: bold;
+	font-weight: bold;
 }
 
 #week {
@@ -97,7 +97,7 @@ div.page {
 	left: 0px;
 	width: 100px;
 	text-align: center;
-	font-weidht: bold;
+	font-weight: bold;
 }
 
 .movie {
