count down and pie fade in animation

--- a/site/src/app/viewer.component.html
+++ b/site/src/app/viewer.component.html
@@ -18,16 +18,18 @@
       </video>
     </div>
     <div class="movie">
-      <img id="pie-background" src="/assets/img/color_circle.png">
       <video width="1200" height="1060" src="assets/mov/3.mp4">
       </video>
-      <div id="progress">
-        <svg viewBox="0 0 100 100">
-          <circle cx="0" cy="0" r="87" class="front" />
-        </svg>
+      <div id="overlay-info">
+        <img id="pie-background" src="/assets/img/color_circle.png">
+        <div id="progress">
+          <svg viewBox="0 0 100 100">
+            <circle cx="0" cy="0" r="87" class="front" />
+          </svg>
+        </div>
+        <div id="clock">{{clock_str}}</div>
+        <img id="waku" src="/assets/img/waku.png">
       </div>
-      <div id="clock">{{clock_str}}</div>
-      <img id="waku" src="/assets/img/waku.png">
     </div>
     <div class="movie">
       <video width="1200" height="1060" src="assets/mov/4.mp4">
