--- a/site/src/app/viewer.component.css
+++ b/site/src/app/viewer.component.css
@@ -169,10 +169,19 @@ div.page {
 }
 
 .fadeIn {
-	animation: fadeIn 3s linear 0s 1 normal;
+	animation: fadeIn 3s linear 0s 1 forwards;
 }
 @keyframes fadeIn {
     0% {opacity: 0}
     75% {opacity: 0}
     100% {opacity: 1}
+}
+
+.fadeIn04 {
+	animation: fadeIn04 3s linear 0s 1 forwards;
+}
+@keyframes fadeIn04 {
+    0% {opacity: 1}
+    75% {opacity: 1}
+    100% {opacity: 0.4}
 }
