--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -22,7 +22,7 @@
   </a>
 </div>
 <div class="grid">
-  <a *ngFor="let c of [1,2,3,4,5,6,7,8,9,10,11,12]" (click)="devctrl({tv: {channel: c}})" class="button">
+  <a *ngFor="let c of ['1','2','3','4','5','6','7','8','9','10','11','12','rec']" (click)="devctrl({tv: {channel: c}})" class="button">
     {{c}}
   </a>
 </div>
