--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -1,3 +1,12 @@
+<div id="content">
+  <nav id="view">
+    view
+  </nav>
+  <div id="info">
+    info
+  </div>
+</div>
+
 <h3>device view</h3>
 <ul>
   <li>tv
