--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -1,8 +1,14 @@
 <div id="content">
-  <nav id="view">
-    view
+  <nav class="view">
+    <h2>view</h2>
+    <div class="tv">
+      <div class="img"></div>
+    </div>
+    <div class="recorder">
+      <div class="img"></div>
+    </div>
   </nav>
-  <div id="info">
+  <div class="info">
     info
   </div>
 </div>
