--- a/site/src/app/device-view.component.css
+++ b/site/src/app/device-view.component.css
@@ -17,8 +17,9 @@
 #content {
 	width: 100vw;
 	height: 100vh;
-	background-color: yellow;
 	padding: 0px;
+	color: #222;
+	font-size: 40px;
 }
 
 #content .view {
