--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -9,7 +9,74 @@
     </div>
   </nav>
   <div class="info">
-    info
+
+    <div class="device">
+      <div class="title">tv</div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">power</th>
+            <td>on</td>
+          </tr>
+          <tr>
+            <th scope="row">ch</th>
+            <td>12</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="device">
+      <div class="title">recorder</div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">power</th>
+            <td>on</td>
+          </tr>
+          <tr>
+            <th scope="row">mode</th>
+            <td>list</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="device">
+      <div class="title">air conditioner</div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">power</th>
+            <td>onhoge</td>
+          </tr>
+          <tr>
+            <th scope="row">temp.</th>
+            <td>25 &#x2103;</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="device">
+      <div class="title">light</div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">scene</th>
+            <td>normal</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="device">
+      <div class="title">shutter</div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">status</th>
+            <td>close</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
