--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -1,6 +1,5 @@
 <div id="content">
   <nav class="view">
-    <h2>view</h2>
     <div class="tv">
       <div class="img"></div>
     </div>
@@ -46,7 +45,7 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>onhoge</td>
+            <td>on</td>
           </tr>
           <tr>
             <th scope="row">temp.</th>
@@ -85,7 +84,7 @@
   <li>tv
     <ul>
       <li>power: {{tv.power}}</li>
-      <li>channel: {{tv.channel}}</li>
+      <li>input: {{tv.channel}}</li>
     </ul>
   </li>
   <li>recorder
