--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -84,13 +84,13 @@
   <li>tv
     <ul>
       <li>power: {{tv.power}}</li>
-      <li>input: {{tv.channel}}</li>
+      <li>input: {{tv.input}}</li>
     </ul>
   </li>
   <li>recorder
     <ul>
       <li>power: {{recorder.power}}</li>
-      <li>channel: {{recorder.mode}}</li>
+      <li>mode: {{recorder.mode}}</li>
     </ul>
   </li>
 </ul>
@@ -103,7 +103,7 @@
   </a>
 </div>
 <div class="grid">
-  <a *ngFor="let c of ['1','2','3','4','5','6','7','8','9','10','11','12','rec']" (click)="devctrl({tv: {channel: c}})" class="button">
+  <a *ngFor="let c of ['1','2','3','4','5','6','7','8','9','10','11','12','rec']" (click)="devctrl({tv: {input: c + 'ch'}})" class="button">
     {{c}}
   </a>
 </div>
