dynamical update the device status

--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -15,11 +15,11 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>on</td>
+            <td>{{tv.power}}</td>
           </tr>
           <tr>
             <th scope="row">ch</th>
-            <td>12</td>
+            <td>{{tv.input}}</td>
           </tr>
         </tbody>
       </table>
@@ -30,11 +30,11 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>on</td>
+            <td>{{recorder.power}}</td>
           </tr>
           <tr>
             <th scope="row">mode</th>
-            <td>list</td>
+            <td>{{recorder.mode}}</td>
           </tr>
         </tbody>
       </table>
@@ -45,11 +45,11 @@
         <tbody>
           <tr>
             <th scope="row">power</th>
-            <td>on</td>
+            <td>{{ac.power}}</td>
           </tr>
           <tr>
-            <th scope="row">temp.</th>
-            <td>25 &#x2103;</td>
+            <th scope="row">temp</th>
+            <td>{{ac.temp}}&#x2103;</td>
           </tr>
         </tbody>
       </table>
@@ -60,7 +60,7 @@
         <tbody>
           <tr>
             <th scope="row">scene</th>
-            <td>normal</td>
+            <td>{{light.scene}}</td>
           </tr>
         </tbody>
       </table>
@@ -71,7 +71,7 @@
         <tbody>
           <tr>
             <th scope="row">status</th>
-            <td>close</td>
+            <td>{{shutter.status}}</td>
           </tr>
         </tbody>
       </table>
