set skelton of tv display

--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -2,6 +2,8 @@
   <nav class="view">
     <div class="tv">
       <div class="img"></div>
+      <div class="display">
+      </div>
     </div>
     <div class="recorder">
       <div class="img"></div>
