--- a/site/src/app/device-view.component.css
+++ b/site/src/app/device-view.component.css
@@ -51,11 +51,23 @@
 }
 
 .view .tv .img {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 1280px;
 	height: 960px;
 	background-image: url(/assets/img/tv.jpg);
 	background-size: contain;
     background-repeat: no-repeat;
+}
+
+.view .tv .display {
+	position: absolute;
+	top: 120px;
+	left: 30px;
+	width: 1220px;
+	height: 690px;
+	background-color: green;
 }
 
 .view .recorder .img {
