--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -6,8 +6,20 @@
           <div *ngIf="tv.input != 'rec'" class="ch">
             {{tv.input}}
           </div>
-          <div *ngIf="tv.input == 'rec'">
-            rec
+          <div *ngIf="tv.input == 'rec' && recorder.power == 'on'" class="rec">
+            <div *ngIf="recorder.mode == 'list'">
+              <div class="title">saved titles</div>
+              <ul class="list-group">
+                <li class="list-group-item disabled">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Morbi leo risus</li>
+                <li class="list-group-item">Porta ac consectetur ac</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+              </ul>
+            </div>
+            <div *ngIf="recorder.mode == 'play'">
+              MOVIE
+            </div>
           </div>
         </div>
       </div>
