re-layout the info panel

--- a/site/src/app/device-view.component.html
+++ b/site/src/app/device-view.component.html
@@ -32,7 +32,7 @@
 
     <div class="device">
       <div class="title">tv</div>
-      <table class="table">
+      <table class="table table-sm">
         <tbody>
           <tr>
             <th scope="row">power</th>
@@ -47,7 +47,7 @@
     </div>
     <div class="device">
       <div class="title">recorder</div>
-      <table class="table">
+      <table class="table table-sm">
         <tbody>
           <tr>
             <th scope="row">power</th>
@@ -62,7 +62,7 @@
     </div>
     <div class="device">
       <div class="title">air conditioner</div>
-      <table class="table">
+      <table class="table table-sm">
         <tbody>
           <tr>
             <th scope="row">power</th>
@@ -77,7 +77,7 @@
     </div>
     <div class="device">
       <div class="title">light</div>
-      <table class="table">
+      <table class="table table-sm">
         <tbody>
           <tr>
             <th scope="row">scene</th>
@@ -88,7 +88,7 @@
     </div>
     <div class="device">
       <div class="title">shutter</div>
-      <table class="table">
+      <table class="table table-sm">
         <tbody>
           <tr>
             <th scope="row">status</th>
