--- a/site/src/app/device-view.component.css
+++ b/site/src/app/device-view.component.css
@@ -17,9 +17,8 @@
 #content {
 	width: 100vw;
 	height: 100vh;
-	padding: 0px;
 	color: #626262;
-	font-size: 40px;
+	font-size: 24px;
 }
 
 #content .view {
@@ -30,12 +29,11 @@
 
 #content .info {
 	position: fixed;
-	right: 0;
-	top: 0;
+	right: 64px;
+	top: 48px;
 	height: 100%;
-	width: 300px;
+	width: 240px;
 	zIndex: 1;
-	margin: 40px 48px;
 }
 
 .view .tv {
@@ -98,11 +96,11 @@
 }
 
 .info .device {
-	margin-bottom: 64px;
+	margin-bottom: 36px;
 }
 
 .info .device .title {
-	margin: 20px 0px;
+	margin: 10px 0px;
 }
 
 td {
