--- a/site/src/app/device-view.component.css
+++ b/site/src/app/device-view.component.css
@@ -44,7 +44,7 @@
 
 .view .recorder {
 	position: absolute;
-	top: 1000px;
+	top: 600px;
 	left: 280px;
 }
 
@@ -52,8 +52,9 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 1280px;
-	height: 960px;
+	border: 1px solid red;
+	width: 880px;
+	height: 660px; /* (* (/ 960 1280.0) 880) */
 	background-image: url(/assets/img/tv.jpg);
 	background-size: contain;
     background-repeat: no-repeat;
@@ -88,8 +89,8 @@
 }
 
 .view .recorder .img {
-	width: 900px;
-	height: 360px;
+	width: 640px;
+	height: 208px;
 	background-image: url(/assets/img/recorder.jpg);
 	background-size: contain;
     background-repeat: no-repeat;
